Fixed Scrolling on Mobile

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -66,6 +66,17 @@ body {
 	margin-top: -100px;
 }
 
+.scroll-wrapper {
+	-webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
+
+	/* important:  dimensions or positioning here! */
+}
+
+.scroll-wrapper iframe {
+	/* nada! */
+}
+
 /* Navbar */
 *, *:before, *:after {
   /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
